--- a/todo-list-app/backend-server/package.json
+++ b/todo-list-app/backend-server/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend-server": "file:",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3"
   }
 }
